# dsn

./: README.md
doc/ei-journal/: hierarchy.tex  references.bib  template_ist_ltr.tex
src/archive/bgzMatlab/: Gy.mat  smallball42x42.mat
src/archive/dsnBasic/: ApplyBaseline.py  ApplyHWS.py  DataLoader.py  GdalLoader.py  SynData.py  Train4BandNoAug.py  Train4BandNoAugLinear.py  TrainQuannLinear.py  TrainTest.py  drawAvgPlots.py  drawPlots.py  extra.py  test.py  udsn.py  unet.py
src/archive/dsnCpp/: CMakeLists.txt  installation.md  log4cplus.properties
src/archive/dsnCpp/dadaCore/: CMakeLists.txt  CMakeLists.txt.bak  ConnectedComponents.cpp  ConnectedComponents.h  DadaDef.cpp  DadaDef.h  DadaException.h  GdalMat.cpp  GdalMat.h  Logger.h  VizMat.cpp  VizMat.h
src/archive/dsnCpp/dadaDSN/: CMakeLists.txt  DadaBatch.cpp  DadaBatch.h  DadaClassifier.cpp  DadaClassifier.h  DadaClassifierBFGS.cpp  DadaClassifierBFGS.h  DadaClassifierLinear.cpp  DadaClassifierLinear.h  DadaClassifierParam.cpp  DadaClassifierParam.h  DadaClassifierStump.cpp  DadaClassifierStump.h  DadaEval.cpp  DadaEval.h  DadaFeatureGenerator.cpp  DadaFeatureGenerator.h  DadaFeatures.cpp  DadaFeatures.h  DadaFeaturesEdge.cpp  DadaFeaturesEdge.h  DadaFeaturesEdges.cpp  DadaFeaturesEdges.h  DadaFeaturesHistogram.cpp  DadaFeaturesHistogram.h  DadaFeaturesKMeans.cpp  DadaFeaturesKMeans.h  DadaFeaturesMoments.cpp  DadaFeaturesMoments.h  DadaFeaturesVecEdges.cpp  DadaFeaturesVecEdges.h  DadaIID.cpp  DadaIID.h  DadaLinear.cpp  DadaLinear.h  DadaMama.cpp  DadaMama.h  DadaParam.cpp  DadaParam.h  DadaPooler.cpp  (+47 more)
src/archive/dsnCpp/dadaML/: ACD.cpp  ACD.h  CMakeLists.txt  CMakeLists.txt.bak  DiscreteDist.h  Discriminant.cpp  Discriminant.h  ErrorEval.cpp  ErrorEval.h  FisherDiscriminant.cpp  FisherDiscriminant.h  Hungarian.cpp  Hungarian.h  KMeanFeatures.cpp  KMeanFeatures.h  MatlabIO.cpp  MatlabIO.h  NormalDataset.cpp  NormalDataset.h  OhmHungarian.cpp  OhmHungarian.h  Stump.cpp  Stump.h  SvmDiscriminant.cpp  SvmDiscriminant.h  SynData.cpp  SynData.h  Whiten.cpp  Whiten.h  i2mlTest.cpp
src/archive/dsnCpp/dadaSeg/: CMakeLists.txt  Morphology.cpp  Morphology.h  SegmentACD.cpp  SegmentACD.h  SegmentEval.cpp  SegmentEval.h  SegmentHACD.h  SegmentParameter.cpp  SegmentParameter.h  SegmentTrain.cpp  SegmentTrain.h  SegmentVectorize.cpp  SegmentVectorize.h  SegmentWS.cpp  SegmentWS.h  SetElement.h  TempSegmentWS.h  ThreshSegment_Int.cpp  ThreshSegment_Int.h
src/archive/dsnCpp/graphCluster/: CMakeLists.txt  mainGraphCluster.cpp
src/archive/dsnCpp/mamaSeg/: CMakeLists.txt  SegmentEval.cpp  SegmentEval.h  SegmentParameter.cpp  SegmentParameter.h  SegmentTrain.cpp  SegmentWS.cpp  SegmentWS.h  SegmentWSMarker.cpp  SegmentWSMarker.h  SetElement.cpp  SetElement.h  TempSegmentWS.cpp  ThreshSegment_Int.cpp  ThreshSegment_Int.h
src/archive/dsnCpp/mamaVectorize/: CMakeLists.txt  mamaVectorizeMain.cpp
src/archive/dsnCpp/paraview/: CMakeLists.txt  InterpolateSfrcOnImage.cxx  InterpolateSoutOnImage.cxx
src/archive/dsnCpp/segTest/: CMakeLists.txt  mainSegCC.cpp  mainSegInt.cpp  mainSegTest.cpp
src/archive/dsnExperiments/: .gitignore  ApplyBaseline.py  ApplyNoAug1Band.py  ApplyNoAug4Band.py  FindMinWOS.py  NoAug1Band.py  NoAug1BandCont.py  NoAug2Band.py  NoAug4Band.py  PlotPKL.py  brianData.py  dsn.py  plot_loss_vs_error.py
src/archive/dsnPython/: .gitignore  FourBand_lDSN_V7_snemi3d.py  MyApply_lDSN_V7_snemi3d.py  MyBaseline_lDSN_V7_snemi3d.py  MyFastTwoBand_lDSN_V7_snemi3d.py  MyFourBand_lDSN_V7_snemi3d.py  MyOneBand_lDSN_V7_snemi3d.py  MyTwoBand_lDSN_V7_snemi3d.py  OneBand_DSN_V7_snemi3d.py  README.md  SynData.py  SynGraph.py  baselineDSN_V7_snemi3d.py  cmds.txt  compareDSN_V7_snemi3d.py  dsn.py  mapDSN_V7_snemi3d.py  plot_loss_vs_error.py  plot_randError_vs_Loss.py  plot_trn_vs_val.py  plots_for_paper.py  randTrainDSN_V1.py  randTrainUnet_V1.py  randTrainUnet_V1_1D.py  randTrainUnet_V1_Graph.py  randTrainUnet_V2.py  randTrainUnet_V3.py  randTrainUnet_V4.py  randTrainUnet_V5.py  randTrainUnet_V5_2D.py  snemData.py  testDSN_V1.py  testDSN_V2.py  testDSN_V3.py  testIndex.py  testWatershed.py  thresh_errors.txt  trainDSN_V1.py  trainDSN_V2.py  trainDSN_V3.py  (+9 more)
src/archive/dsnPython_module/dsn/: README.md  setup.py
src/archive/dsnPython_module/dsn/dsn/: fd_ops.py  vis_tools.py
src/archive/dsnPython_module/dsn/dsn/datasets/: __init__.py  isbi.py  pbx_9501.py  snemi3d.py
src/archive/dsnPython_scripts/data_tools/PBX-9501/: extract_images.py
src/archive/dsnPython_scripts/data_tools/brainiac2-isbi/: extract-images.py
src/archive/dsnPython_scripts/data_tools/brainiac2-snemi3d/: extract_images.py  show_segments.py
src/archive/plots/: all_errors_radius.pkl  dense_errors.pkl  plot_dense_radius.py  plot_offset_radius.py  plot_skip_radius.py  plot_thresh.py  plot_thresh_radius.py  radius_errors.pkl  skip_errors.pkl
